--- a/package.json
+++ b/package.json
@@ -9,25 +9,38 @@
   },
   "author": "Andrei Parsegov",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "postcss-uncss": "^0.17.0",
+    "stylelint-config-recommended": "^3.0.0",
+    "uncss": "^0.17.2"
+  },
   "devDependencies": {
     "autoprefixer": "^9.6.0",
     "browser-sync": "2.26.7",
+    "cssnano": "^4.1.10",
     "gulp": "^4.0.1",
     "gulp-cli": "^2.2.0",
-    "gulp-csso": "3.0.1",
-    "gulp-imagemin": "6.0.0",
-    "gulp-plumber": "1.2.1",
+    "gulp-csso": "^3.0.1",
+    "gulp-imagemin": "^6.0.0",
+    "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
-    "gulp-rename": "1.4.0",
-    "gulp-sass": "4.0.2",
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
-    "gulp-uncss": "^1.0.6",
-    "gulp-webp": "4.0.1",
-    "node-sass": "4.12.0",
+    "gulp-webp": "^4.0.1",
+    "node-sass": "^4.12.0",
     "postcss": "^7.0.17",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-csso": "^3.0.0",
     "postcss-import": "^12.0.1",
     "postcss-normalize-url": "^4.0.1",
-    "precss": "^3.1.2"
+    "precss": "^3.1.2",
+    "stylelint": "^11.0.0",
+    "stylelint-config-recommended-scss": "^4.0.0",
+    "stylelint-config-standard": "^19.0.0"
+  },
+  "peerDependencies": {
+    "stylelint": "^10.1.0 || ^11.0.0",
+    "stylelint-scss": "^3.0.0"
   }
 }
